# SimpleECS

./: CMakeLists.txt  library.h
include/: ComponentArray.h  ComponentController.h  ComponentManager.h  EntityManager.h  SimpleECS.cpp  System.h  SystemManager.h  Types.h
src/: ComponentArray.cpp  EntityManager.cpp  SimpleECS.cpp
